--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        java: [ '7', '8']
+        java: [ '7', '8', '11', '16']
 
     name: Java ${{ matrix.java }} build with Maven
     env:
