--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        java: [ '7', '8']
+        java: [ '7', '8', '11', '16']
 
     name: Java ${{ matrix.java }} build with Maven
     env:
@@ -28,15 +28,33 @@ jobs:
           java-version: ${{ matrix.java }}
           distribution: 'zulu'
       - name: Build with Maven
-        run: mvn site --batch-mode -DbuildNumber=${GITHUB_RUN_NUMBER}
+        run: mvn test --batch-mode -DbuildNumber=${GITHUB_RUN_NUMBER}
       - name: Check for vulnerabilities
         run: mvn org.sonatype.ossindex.maven:ossindex-maven-plugin:audit
-      - name: Deploy docs 🚀
-        uses: JamesIves/github-pages-deploy-action@4.1.4
-        if: github.ref == 'refs/heads/master' && matrix.java == '7'
+
+  update-site:
+    needs: build
+    runs-on: ubuntu-latest
+    name: Site build with Maven
+    if: github.ref == 'refs/heads/master'
+    env:
+      MAVEN_OPTS: '-Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn'
+    steps:
+      - uses: actions/checkout@v2
+      - name: Cache local Maven repository
+        uses: actions/cache@v2
         with:
-          branch: gh-pages # The branch the action should deploy to.
-          folder: target/site # The folder the action should deploy.
+          path: ~/.m2/repository
+          key: site-${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            site-${{ runner.os }}-maven-
+      - name: Set up JDK
+        uses: actions/setup-java@v2
+        with:
+          distribution: 'adopt'
+          java-version: '8'
+      - name: Generate site with Maven
+        run: mvn test org.pitest:pitest-maven:mutationCoverage site --batch-mode -DbuildNumber=${GITHUB_RUN_NUMBER}
 
   coverage:
     needs: build
@@ -55,8 +73,8 @@ jobs:
         with:
           distribution: 'adopt'
           java-version: '8'
-      - name: Coverage with Cobertura Maven plugin
-        run: mvn cobertura:cobertura --quiet --batch-mode -DbuildNumber=${GITHUB_RUN_NUMBER}
+      - name: Coverage with Jacoco Maven plugin
+        run: mvn verify jacoco:report --quiet --batch-mode -DbuildNumber=${GITHUB_RUN_NUMBER}
       - uses: codecov/codecov-action@v1
         with:
           fail_ci_if_error: true
